# emotion_labeling_refactoring

./: .gitignore  SECURITY_IMPROVEMENTS.md  app.py  check_user.py  config.py  debug_db.py  group_assignment_manager.py  pyproject.toml  start_server.py  test_admin_api.py  test_api_endpoints.py  test_order_service.py
.trae/rules/: project_rules.md
database/: admins.db  emotion_labels.db  group_assignments.db  users.db
database/exports/: emotion_labels_user_zhangsan_20250615_074838.csv  emotion_labels_user_zhangsan_20250615_120728.csv
labels/: users.db
labels/zhangsan/: spk182-2-1_labels.json  spk182-3-1_labels.json  spk182-5-1_labels.json
models/: admin_model.py  emotion_model.py  user_model.py
order_list/test/: speakers_order.json  spk75_audio_order.json
order_list/zhangsan/: speakers_order.json  spk161_audio_order.json  spk182_audio_order.json  spk36_audio_order.json  spk75_audio_order.json
routes/: admin_routes.py  api_routes.py  consistency_routes.py  group_routes.py  main_routes.py  test_routes.py
scripts/: README.md  init_all_db.py  init_db.py  init_group_assignment_db.py  manage_db.py  migrate_order_to_db.py  user_order_manager.py
services/: admin_service.py  audio_service.py  database_service.py  label_service.py  order_service.py  user_service.py
static/css/: admin.css  login.css  style.css
static/js/: admin.js  audioPlayer.js  (+9 more)
templates/: admin_dashboard.html  admin_login.html  consistency_test.html  index.html  login.html  test.html
utils/: audio_utils.py  count_audio_files.py  extract_consistency_test_data.py  file_utils.py  logger.py
